responsive style is added to banner section

--- a/index.html
+++ b/index.html
@@ -35,6 +35,23 @@
                 </li>
             </ul>
         </nav>
+        <!-- banner  -->
+        <div class="banner">
+            <div class="banner-content">
+                <h3 class="banner-title">Play Like The</h3>
+                <h1 class="banner-goat-text">G.O.A.T.</h1>
+                <ul class="banner-content-option-list">
+                    <li><i class="fa-solid fa-play"></i> 1-Click instant play</li>
+                    <li><i class="fa-solid fa-download"></i> No Download</li>
+                    <li style ="white-space:nowrap"><i class="fa-solid fa-user-group"></i> 1000s of supported online games</li>
+                </ul>
+                <button class="sign-in-btn">Sign In</button>
+                <button class="go-rogue-btn">Go Rogue</button>
+            </div>
+            <div class="banner-image-container">
+                <img src="./images/Group 18.png" alt="Banner Image">
+            </div>
+        </div>
     </header>
     <main></main>
     <footer></footer>
