--- a/index.html
+++ b/index.html
@@ -53,7 +53,21 @@
             </div>
         </div>
     </header>
-    <main></main>
+    <main>
+        <!-- gamer section  -->
+        <section class="gamer">
+            <div class="gamer-image-container">
+                <img src="./images/pngwing 4.png" alt="Gamer Image">
+            </div>
+            <div class="gamer-content">
+                <h3 class="gamer-title">We are gamer</h3>
+                <p class="gamer-description">An international digital games and entertainment company. We develop, publish and distribute multiplayer mobile games. We reach over 400 million players each month and our audience keeps growing.</p>
+                <button class="gamer-button">know more</button>
+                <p class="gamer-footer-txt"><p class="purpose">Our purpose...</p>
+                    <span class="unleash">“unleash the gamer in everyone”</span></p>
+            </div>
+        </section>
+    </main>
     <footer></footer>
 </body>
 </html>
