instant play section added

--- a/index.html
+++ b/index.html
@@ -162,6 +162,17 @@
                 </div>
             </div>
         </section>
+        <!-- instant play section  -->
+        <section class="instant-play">
+            <div class="instant-play-content">
+                <h3 class="instant-play-title"> <span class="play-instantly">Play Instantly,</span> No Downloads No Installs.</h3>
+                <p class="instant-play-description">Play games online for free without downloading. Just click the Play button and play instantly in your browser.</p>
+            </div>
+            <div class="instant-play-image-container">
+                <img src="./images/Rectangle 55.png" alt="">
+                <img class="baby-image" src="./images/Rectangle 66.png" alt="">
+            </div>
+        </section>
     </main>
     <footer></footer>
 </body>
