play games section added

--- a/index.html
+++ b/index.html
@@ -173,6 +173,17 @@
                 <img class="baby-image" src="./images/Rectangle 66.png" alt="">
             </div>
         </section>
+        <!-- play game section  -->
+        <section class="play-game">
+            <div class="play-game-image-container">
+                <img src="./images/Rectangle 67.png" alt="">
+                <img class="angry-baby" src="./images/Rectangle 78.png" alt="">
+            </div>
+            <div class="play-game-content">
+                <h3 class="play-game-title"> <span class="play-games">Play Games</span> <span class="online">Online</span> Anywhere, Anytime!</h3>
+                <p class="play-game-description">PC. dad’s phone, mom’s tablet, or your Chromebook, with Gamer you can play your favorite games online for free, any time, anywhere , on any device.</p>
+            </div>
+        </section>
     </main>
     <footer></footer>
 </body>
