--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             </ul>
         </nav>
         <!-- banner  -->
-        <div class="banner">
+        <div class="left-right-equal-space banner">
             <div class="banner-content">
                 <h3 class="banner-title">Play Like The</h3>
                 <h1 class="banner-goat-text">G.O.A.T.</h1>
@@ -54,8 +54,8 @@
         </div>
     </header>
     <main>
-        <!-- gamer section  -->
-        <section class="gamer">
+        <!-- ======================gamer section=========================  -->
+        <section class="left-right-equal-space gamer">
             <div class="gamer-image-container">
                 <img src="./images/pngwing 4.png" alt="Gamer Image">
             </div>
@@ -67,8 +67,8 @@
                     <span class="unleash">“unleash the gamer in everyone”</span></p>
             </div>
         </section>
-        <!-- online games section  -->
-        <section class="online-games">
+        <!-- ======================online games section==================  -->
+        <section class="left-right-equal-space online-games">
             <h3 class="online-game-title">Online Games <span class="funny-video">Funny Videos</span></h3>
             <p class="online-game-description">A Collection of Hilarious Videos to Brighten Your Day</p>
             <div class="game-container">
@@ -162,8 +162,8 @@
                 </div>
             </div>
         </section>
-        <!-- instant play section  -->
-        <section class="instant-play">
+        <!-- ======================instant play section===================  -->
+        <section class="left-right-equal-space instant-play">
             <div class="instant-play-content">
                 <h3 class="instant-play-title"> <span class="play-instantly">Play Instantly,</span> No Downloads No Installs.</h3>
                 <p class="instant-play-description">Play games online for free without downloading. Just click the Play button and play instantly in your browser.</p>
@@ -173,8 +173,8 @@
                 <img class="baby-image" src="./images/Rectangle 66.png" alt="">
             </div>
         </section>
-        <!-- play game section  -->
-        <section class="play-game">
+        <!-- =======================play game section====================  -->
+        <section class="left-right-equal-space play-game">
             <div class="play-game-image-container">
                 <img src="./images/Rectangle 67.png" alt="">
                 <img class="angry-baby" src="./images/Rectangle 78.png" alt="">
@@ -182,6 +182,97 @@
             <div class="play-game-content">
                 <h3 class="play-game-title"> <span class="play-games">Play Games</span> <span class="online">Online</span> Anywhere, Anytime!</h3>
                 <p class="play-game-description">PC. dad’s phone, mom’s tablet, or your Chromebook, with Gamer you can play your favorite games online for free, any time, anywhere , on any device.</p>
+            </div>
+        </section>
+        <!-- ======================Carees Section========================  -->
+        <section class="carees-section">
+            <div class="careers-content">
+                <h3 class="carees-title">Careers</h3>
+            <p class="carees-description">Gamer is driven to create the best and most fun games for our millions of players all around the world, and we,re always on the lookout for more top talent to join our growing team. If you,d like to help us make great games and be a part of Gamers bright future, we,d love to hear from you.</p>
+            <table class="careers-list">
+                <tr>
+                    <th>Multimedia Artist +</th>
+                    <td>Lisbon, Portugal</td>
+                </tr>
+                <tr><th>Multimedia Artist +</th>
+                    <td>Lisbon, Portugal</td>
+                </tr>
+                <tr>
+                    <th>Multimedia Artist +</th>
+                    <td>Lisbon, Portugal</td>
+                </tr>
+                <tr>
+                    <th>Multimedia Artist +</th>
+                    <td>Lisbon, Portugal</td>
+                </tr>
+                <tr>
+                    <th>Multimedia Artist +</th>
+                    <td>Lisbon, Portugal</td>
+                </tr>
+                <tr>
+                    <th>Multimedia Artist +</th>
+                    <td>Lisbon, Portugal</td>
+                </tr>
+            </table>
+            <button class="career-button">See all positions</button>
+            </div>
+            <div class="careers-image-container">
+                <img src="./images/Group 65.png" alt="">
+            </div>
+        </section>
+        <!-- =====================game types section=====================  -->
+        <section class="left-right-equal-space game-types">
+            <!-- game-type-1  -->
+            <div class="game-type-item">
+                <img src="./images/Rectangle 11.png" alt="">
+                <h3 class="game-type-title">Action Games</h3>
+            </div>
+
+            <!-- game-type-2  -->
+            <div class="game-type-item">
+                <img src="./images/Rectangle 12.png" alt="">
+                <h3 class="game-type-title">Adventure Games</h3>
+            </div>
+
+            <!-- game-type-3  -->
+            <div class="game-type-item">
+                <img src="./images/Rectangle 13.png" alt="">
+                <h3 class="game-type-title">Arcade Games</h3>
+            </div>
+
+            <!-- game-type-4  -->
+            <div class="game-type-item">
+                <img src="./images/Rectangle 14.png" alt="">
+                <h3 class="game-type-title">Educational Games</h3>
+            </div>
+
+            <!-- game-type-5  -->
+            <div class="game-type-item">
+                <img src="./images/Rectangle 15.png" alt="">
+                <h3 class="game-type-title">Word Games</h3>
+            </div>
+            <!-- game-type-6  -->
+            <div class="game-type-item">
+                <img src="./images/Rectangle 17.png" alt="">
+                <h3 class="game-type-title">Music & Audio Games</h3>
+            </div>
+
+            <!-- game-type-7  -->
+            <div class="game-type-item">
+                <img src="./images/Rectangle 18.png" alt="">
+                <h3 class="game-type-title">Music & Audio Games</h3>
+            </div>
+
+            <!-- game-type-8  -->
+            <div class="game-type-item">
+                <img src="./images/Rectangle 18.png" alt="">
+                <h3 class="game-type-title">Puzzle Games</h3>
+            </div>
+
+            <!-- game-type-9  -->
+            <div class="game-type-item">
+                <img src="./images/Rectangle 19.png" alt="">
+                <h3 class="game-type-title">Strategy Games</h3>
             </div>
         </section>
     </main>
