responsive css added to footer section

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </header>
     <main>
         <!-- ======================gamer section=========================  -->
-        <section class="left-right-equal-space gamer">
+        <section class="gamer">
             <div class="gamer-image-container">
                 <img src="./images/pngwing 4.png" alt="Gamer Image">
             </div>
@@ -225,31 +225,31 @@
             <!-- game-type-1  -->
             <div class="game-type-item">
                 <img src="./images/Rectangle 11.png" alt="">
-                <h3 class="game-type-title">Action Games</h3>
+                <h4 class="game-type-title">Action Games</h4>
             </div>
 
             <!-- game-type-2  -->
             <div class="game-type-item">
                 <img src="./images/Rectangle 12.png" alt="">
-                <h3 class="game-type-title">Adventure Games</h3>
+                <h4 class="game-type-title">Adventure Games</h4>
             </div>
 
             <!-- game-type-3  -->
             <div class="game-type-item">
                 <img src="./images/Rectangle 13.png" alt="">
-                <h3 class="game-type-title">Arcade Games</h3>
+                <h4 class="game-type-title">Arcade Games</h4>
             </div>
 
             <!-- game-type-4  -->
             <div class="game-type-item">
                 <img src="./images/Rectangle 14.png" alt="">
-                <h3 class="game-type-title">Educational Games</h3>
+                <h4 class="game-type-title">Educational Games</h4>
             </div>
 
             <!-- game-type-5  -->
             <div class="game-type-item">
                 <img src="./images/Rectangle 15.png" alt="">
-                <h3 class="game-type-title">Word Games</h3>
+                <h4 class="game-type-title">Word Games</h4>
             </div>
             <!-- game-type-6  -->
             <div class="game-type-item">
@@ -260,19 +260,19 @@
             <!-- game-type-7  -->
             <div class="game-type-item">
                 <img src="./images/Rectangle 18.png" alt="">
-                <h3 class="game-type-title">Music & Audio Games</h3>
+                <h4 class="game-type-title">Music & Audio Games</h4>
             </div>
 
             <!-- game-type-8  -->
             <div class="game-type-item">
                 <img src="./images/Rectangle 18.png" alt="">
-                <h3 class="game-type-title">Puzzle Games</h3>
+                <h4 class="game-type-title">Puzzle Games</h4>
             </div>
 
             <!-- game-type-9  -->
             <div class="game-type-item">
                 <img src="./images/Rectangle 19.png" alt="">
-                <h3 class="game-type-title">Strategy Games</h3>
+                <h4 class="game-type-title">Strategy Games</h4>
             </div>
         </section>
     </main>
