game category alignment and hover problem fixed

--- a/index.html
+++ b/index.html
@@ -194,23 +194,23 @@
                     <th>Multimedia Artist +</th>
                     <td>Lisbon, Portugal</td>
                 </tr>
-                <tr><th>Multimedia Artist +</th>
+                <tr><th>Data Engineer +</th>
                     <td>Lisbon, Portugal</td>
                 </tr>
                 <tr>
-                    <th>Multimedia Artist +</th>
+                    <th>Adroid Engineer +</th>
+                    <td>Zoetermeer, Netherlands</td>
+                </tr>
+                <tr>
+                    <th>Server Developer +</th>
                     <td>Lisbon, Portugal</td>
                 </tr>
                 <tr>
-                    <th>Multimedia Artist +</th>
-                    <td>Lisbon, Portugal</td>
+                    <th>Group Financial Accountan +</th>
+                    <td>United Kingdom Lisbon</td>
                 </tr>
                 <tr>
-                    <th>Multimedia Artist +</th>
-                    <td>Lisbon, Portugal</td>
-                </tr>
-                <tr>
-                    <th>Multimedia Artist +</th>
+                    <th>Senior User Acuisition Specialis +</th>
                     <td>Lisbon, Portugal</td>
                 </tr>
             </table>
@@ -221,7 +221,7 @@
             </div>
         </section>
         <!-- =====================game types section=====================  -->
-        <section class="left-right-equal-space game-types">
+        <section class="game-types">
             <!-- game-type-1  -->
             <div class="game-type-item">
                 <img src="./images/Rectangle 11.png" alt="">
@@ -254,12 +254,12 @@
             <!-- game-type-6  -->
             <div class="game-type-item">
                 <img src="./images/Rectangle 17.png" alt="">
-                <h3 class="game-type-title">Music & Audio Games</h3>
+                <h4 class="game-type-title">Role Palying Games</h4>
             </div>
 
             <!-- game-type-7  -->
             <div class="game-type-item">
-                <img src="./images/Rectangle 18.png" alt="">
+                <img src="./images/Rectangle 16.png" alt="">
                 <h4 class="game-type-title">Music & Audio Games</h4>
             </div>
 
